<resources>
    <string name="app_name">My Local Restaurant Finder</string>

    <string name="restaurant_description">Restaurant Description</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="mark_as_favorite_label">Mark as Favorite</string>
    <string name="reviews_label">Reviews</string>

    <string name="error_message_api">There is an error!</string>
    <string name="error_business_url_not_available">Business URL not available</string>
</resources>