<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/restaurant_image"
            android:src="@drawable/ic_restaurant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/business_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/restaurant_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/restaurant_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/restaurant_name" />

        <TextView
            android:id="@+id/business_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/restaurant_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/business_name"
            app:layout_constraintTop_toBottomOf="@id/business_name"
            tools:text="@string/restaurant_description" />

        <RatingBar
            android:id="@+id/business_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:rating="3.5"
            app:layout_constraintStart_toStartOf="@id/business_name"
            app:layout_constraintTop_toBottomOf="@id/business_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>